manifests/grafana/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  labels:
    app: grafana
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`graf.juicewizerd.com`)
      kind: Rule
      services:
        - name: grafana-svc
          port: 80
      middlewares:
        - name: crowdsec-authelia
  tls:
    secretName: juicewizerd-le-com-tls
